--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="OfficeInstaller.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Office Deployment Tool GUI" Height="150" Width="450" Icon="microsoft-office.ico">
+        Title="Office Deployment Tool GUI" Height="172" Width="450" Icon="microsoft-office.ico">
 
     <!-- Styling -->
     <Window.Resources>
@@ -18,12 +18,18 @@
         <!-- Rows definition -->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <!-- Row for the label -->
+            <!-- Row for the label "Choose Configuration XML:" -->
+            <RowDefinition Height="Auto"/>
+            <!-- Row for the ComboBox -->
             <RowDefinition Height="Auto"/>
             <!-- Row for the TextBox and Choose button -->
             <RowDefinition Height="Auto"/>
             <!-- Row for the Install button -->
+            <RowDefinition Height="Auto"/>
+            <!-- Row for the Show Exe Folder button -->
         </Grid.RowDefinitions>
+
+
 
         <!-- Choose Configuration XML Label -->
         <TextBlock Text="Choose Configuration XML:" FontWeight="Bold" Margin="0,0,0,10" Grid.Row="0"/>
@@ -32,7 +38,13 @@
         <TextBox x:Name="XmlPathTextBox" IsReadOnly="True" Grid.Row="1" HorizontalAlignment="Stretch" Margin="0,0,120,0"/>
         <Button Content="Choose XML" Click="ChooseXmlButton_Click" Width="100" Grid.Row="1" HorizontalAlignment="Left" Margin="330,0,0,28" Grid.RowSpan="2"/>
 
+        <ComboBox x:Name="XmlFilesComboBox" Grid.Row="1" HorizontalAlignment="Stretch" Margin="0,0,120,0" SelectionChanged="XmlFilesComboBox_SelectionChanged"/>
+
         <!-- Install Office Button -->
         <Button Content="Install Office" Width="200" Click="InstallOfficeButton_Click" Grid.Row="2" HorizontalAlignment="Center"/>
+        
+        <Button Content="Show Local Folder" Width="200" Click="ShowExeFolderButton_Click" Grid.Row="3" HorizontalAlignment="Center"/>
+        
+
     </Grid>
 </Window>
