--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,8 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Office Deployment Tool GUI" Height="319" Width="786" Icon="microsoft-office.ico"
-        FontFamily="Segoe UI">
+        FontFamily="Segoe UI"
+        ResizeMode="CanMinimize"
+        WindowStyle="SingleBorderWindow">
 
+
+
+    <Window.Background>
+        <ImageBrush ImageSource="form-background.jpg"/>
+    </Window.Background>
+    
     <!-- Styling for the buttons -->
     <Window.Resources>
         <Style TargetType="Button">
@@ -39,77 +47,57 @@
         </Style>
     </Window.Resources>
 
-    <!-- Layout Grid -->
     <Grid Margin="10">
-
-        <!-- Row definitions for layout control -->
         <Grid.RowDefinitions>
-            <!-- Row for the main title -->
             <RowDefinition Height="Auto"/>
-            <!-- Row for the label and ComboBox to select XMLs -->
             <RowDefinition Height="Auto"/>
-            <!-- Row for the TextBox to display chosen XML path and button to manually select XML -->
             <RowDefinition Height="Auto"/>
-            <!-- Row for the Install button -->
             <RowDefinition Height="Auto"/>
-            <!-- Row for the Show Exe Folder button -->
-            <RowDefinition Height="Auto" MinHeight="26.96"/>
         </Grid.RowDefinitions>
 
-        <!-- Main title for better clarity -->
-        <TextBlock Text="Office Deployment Configuration" 
+        <TextBlock Text="Office Deployment Configuration"
+                   Foreground="White"
                    FontWeight="Bold" 
                    FontSize="20" 
                    Grid.Row="0" 
                    HorizontalAlignment="Center" 
-                   Margin="0,0,0,20" Width="314"/>
+                   Margin="0,0,0,20"/>
 
-        <!-- Label to indicate the purpose of the ComboBox below it -->
-        <TextBlock Text="Available Configuration XMLs:" 
-                   FontWeight="Bold" 
-                   Margin="0,4,0,1" 
-                   Grid.Row="1"/>
+        <!-- Group related controls -->
+        <StackPanel Orientation="Vertical" Grid.Row="1">
+            <TextBlock Text="Available Configuration XMLs:"
+                       Foreground="White"
+                       FontWeight="Bold"/>
+            <ComboBox x:Name="XmlFilesComboBox" 
+                      DisplayMemberPath="FileName" 
+                      SelectionChanged="XmlFilesComboBox_SelectionChanged"
+                      ToolTip="Select a configuration XML from the list."/>
+            <Button Content="Browse..." 
+                    Click="ChooseXmlButton_Click" 
+                    HorizontalAlignment="Right" 
+                    ToolTip="Manually select an XML configuration."/>
+        </StackPanel>
 
-        <!-- ComboBox to list available XML configurations. Displays file names using FileName property -->
-        <ComboBox x:Name="XmlFilesComboBox" 
-          Grid.Row="2" 
-          Margin="0,4,120,8" 
-          DisplayMemberPath="FileName" 
-          SelectionChanged="XmlFilesComboBox_SelectionChanged"></ComboBox>
-
-
-        <!-- Label for the TextBox to indicate its purpose -->
-        <TextBlock Text="Selected Configuration Path:" 
-                   FontWeight="Bold" 
-                   Margin="0,10,0,1" 
-                   Grid.Row="4"/>
-
-        <!-- TextBox to display path of the selected XML configuration -->
-        <TextBox x:Name="XmlPathTextBox" 
+        <StackPanel Orientation="Vertical" Grid.Row="2">
+            <TextBlock Text="Selected Configuration Path:"
+                       Foreground="White"
+                       FontWeight="Bold"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBox x:Name="XmlPathTextBox" 
                  IsReadOnly="True" 
-                 Grid.Row="4" 
-                 Margin="0,30,120,-22"/>
+                 Width="721" 
+                 TextChanged="XmlPathTextBox_TextChanged"/>
+                <Image x:Name="ValidationCheckmark" Source="checkmark.png" Width="20" Height="20" Margin="5,0,0,0" Visibility="Collapsed"/>
+            </StackPanel>
+        </StackPanel>
 
-        <!-- Button to open file dialog and manually choose XML configuration -->
-        <Button Content="Browse..." 
-                Click="ChooseXmlButton_Click" 
-                Width="100" 
-                Grid.Row="2" 
-                HorizontalAlignment="Right" 
-                Margin="0,2,15,8"/>
-
-        <!-- Button to initiate Office Installation using the chosen XML configuration -->
-        <Button Content="Install Office using Configuration" 
-                Width="250" 
-                Click="InstallOfficeButton_Click" 
-                Grid.Row="4" 
-                HorizontalAlignment="Center" Margin="0,103,0,-95"/>
-
-        <!-- Button to open the folder containing the executable -->
-        <Button Content="Open Configuration Folder" 
-                Width="250" 
-                Click="ShowExeFolderButton_Click" 
-                Grid.Row="4" 
-                HorizontalAlignment="Center" Margin="0,133,0,-126"/>
+        <StackPanel Orientation="Vertical" Grid.Row="3">
+            <Button Content="Install Office using Configuration" 
+                    Click="InstallOfficeButton_Click" 
+                    HorizontalAlignment="Center"/>
+            <Button Content="Open Configuration Folder" 
+                    Click="ShowExeFolderButton_Click" 
+                    HorizontalAlignment="Center"/>
+        </StackPanel>
     </Grid>
 </Window>
